# cmake_study

./: CMakeLists.txt  README.md  codecov.yml
.github/workflows/: macos.yml  ubuntu.yml  ubuntu_codecov.yml  windows.yml
CMake/: CompileOptions.cmake
include/: calc.h  doctest.h
lib/: doctest.h
src/: CMakeLists.txt  calc.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
